# frontstores

./: .gitignore  CLAUDE.md  build_log.txt  docker-compose.infra.yml  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/workflows/: build.yml  deploy-website.yml  promote.yml  test.yml
.turbo/cache/: 09c411693c5422e6-manifest.json  09c411693c5422e6-meta.json  09c411693c5422e6.tar.zst  49551b2ed115a6c7-manifest.json  49551b2ed115a6c7-meta.json  (+25 more)
admin-app/: icon-preview.html  index.html
admin-mac-app/: package-lock.json  package.json
admin-mac-app/src-tauri/: Cargo.toml  tauri.conf.json
admin-mac-app/src-tauri/capabilities/: default.json
admin-mac-app/src-tauri/src/: lib.rs  main.rs
frontend/: Dockerfile  nginx.gcp.conf.template  package.json  vite.config.ts
scripts/: android-setup.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  icon-preview-v2.html  icon-preview-v3.html  icon-preview-v4.html  icon-preview.html  tauri.conf.json
test/: data-doctor.test.ts  money-flows.test.ts
tools/: deploy-gcp.sh  dev-start.sh  dev-tenant.sh  install-admin-app.sh  install-tunnel-service.sh  kokoro-server.py  migrate-safe.sh  migrate-to-mac-mini.sh  release.sh  server.log.bak  setup-tunnel.sh  start-ai.sh  start-server.sh  subscriptions.json  update-server.cjs  update-server.js
voice-assistant/: index.html  server.cjs
website/: apps-data.js  index.html  privacy.html  refund.html  terms.html
(+580 files in other folders)
