[package]
name = "frontstores-admin"
version = "1.0.0"
description = "FrontStores Admin Panel — native Mac launcher"
authors = ["Rakesh Soni"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "frontstores_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
